--- a/index.html
+++ b/index.html
@@ -3,23 +3,35 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>pranktag</title>
+<title>Мой сайт</title>
 <style>
+  * {
+    box-sizing: border-box;
+  }
+
   html, body {
     margin: 0;
     padding: 0;
     height: 100%;
     overflow: hidden;
     font-family: "Segoe UI", sans-serif;
+    background: none;
+  }
+
+  /* Контейнер, чтобы элементы центрировались, но не обрезались */
+  .wrapper {
+    position: relative;
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: visible; /* вот ключевой момент! */
     cursor: pointer;
   }
 
-  /* Фоновое изображение с размытием */
-  body::before {
-    content: '';
+  /* Фон с размытием */
+  .background {
     position: absolute;
     top: 0;
     left: 0;
@@ -30,26 +42,37 @@
     background-position: center;
     filter: blur(25px) brightness(0.9);
     transform: scale(1.1);
+    z-index: -2;
+  }
+
+  /* Полупрозрачная подложка для глубины */
+  .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.2);
     z-index: -1;
   }
 
   /* Центральная круглая картинка */
   .circle-img {
-    width: 220px;
-    height: 220px;
+    width: 230px;
+    height: 230px;
     border-radius: 50%;
     background-image: url('image.jpg'); /* Замените на вашу картинку */
     background-size: cover;
     background-position: center;
     border: 6px solid rgba(255, 255, 255, 0.8);
-    box-shadow: 0 0 20px rgba(255, 255, 255, 0.4);
-    z-index: 1;
+    box-shadow: 0 0 40px rgba(255, 255, 255, 0.6);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
+    z-index: 1;
   }
 
   .circle-img:hover {
-    transform: scale(1.05);
-    box-shadow: 0 0 35px rgba(255, 255, 255, 0.6);
+    transform: scale(1.07);
+    box-shadow: 0 0 60px rgba(255, 255, 255, 0.8);
   }
 
   /* Кнопка Telegram */
@@ -67,6 +90,7 @@
     color: #111;
     text-decoration: none;
     transition: all 0.25s ease;
+    z-index: 2;
   }
 
   .telegram-btn:hover {
@@ -78,17 +102,24 @@
   .telegram-btn:active {
     transform: scale(0.97);
   }
+
 </style>
 </head>
 <body>
 
-<div class="circle-img"></div>
-<a class="telegram-btn" href="https://t.me/pranktag" target="_blank">🔇 ЗАГЛУШИТЬ ЗВУК</a>
+<div class="wrapper">
+  <div class="background"></div>
+  <div class="overlay"></div>
 
-<audio id="myAudio" loop>
-  <source src="audio.mp3" type="audio/mpeg"> <!-- Замените на свой аудиофайл -->
-  Ваш браузер не поддерживает аудио.
-</audio>
+  <div class="circle-img"></div>
+
+  <a class="telegram-btn" href="https://t.me/yourchannel" target="_blank">🔇 ЗАГЛУШИТЬ ЗВУК</a>
+
+  <audio id="myAudio" loop>
+    <source src="audio.mp3" type="audio/mpeg">
+    Ваш браузер не поддерживает аудио.
+  </audio>
+</div>
 
 <script>
   const audio = document.getElementById('myAudio');
@@ -104,4 +135,9 @@
 </script>
 
 </body>
+</html>
+</script>
+
+</body>
+
 </html>
